Add first draft of workshop proposal

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Semantic Web Developers Workshop (SemDev)"
+title: "Developers Workshop (SemDev)"
 ---
 <header markdown="1">
 # <%= @item[:title] %>
