Focus more on breakouts

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -17,6 +17,10 @@ title: "Developers Workshop (SemDev)"
              Prague University of Economics and Business, Prague, Czech Republic
 			 <br />E-mail: mynarzjindrich@gmail.com
 
+<section class="context" markdown="block">
+Workshop at [ISWC 2025](https://iswc2025.semanticweb.org/#/calls/workshopstutorials){:rel="as:inReplyTo"}, November 2/3 2025
+</section>
+
 <%= section 'abstract' %>
 </header>
 
