--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -7,6 +7,7 @@ title: "Developers Workshop (SemDev)"
 {:#authors}
 - <%= person 'Ruben Taelman', 'https://www.rubensworks.net/', 'https://www.rubensworks.net/#me' %>[<sup>1</sup>](#idlab)
 - <%= person 'Jindřich Mynarz', 'https://mynarz.net/', 'https://mynarz.net/#jindrich' %>[<sup>2</sup>](#prague)
+- <%= person 'Jerven Bolleman', 'https://www.sib.swiss/directory/person/jerven-tjalling-bolleman' %>[<sup>3</sub>](#swiss-prot)
 
 {:#affiliations}
 - <sup>1</sup>{:#idlab} IDLab,
@@ -16,6 +17,10 @@ title: "Developers Workshop (SemDev)"
 - <sup>2</sup>{:#prague} Department of Information and Knowledge Engineering,
              Prague University of Economics and Business, Prague, Czech Republic
 			 <br />E-mail: mynarzjindrich@gmail.com
+- <sup>3</sup>{:#swiss-prot} Swiss-Prot Group,
+             SIB Swiss Institue of Bioinformatics, Geneva, Switzerland
+			 <br />E-mail: jerven.bolleman@sib.swiss
+
 
 <section class="context" markdown="block">
 Workshop at [ISWC 2025](https://iswc2025.semanticweb.org/#/calls/workshopstutorials){:rel="as:inReplyTo"}, November 2/3 2025
