--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -7,7 +7,7 @@ title: "Developers Workshop (SemDev)"
 {:#authors}
 - <%= person 'Ruben Taelman', 'https://www.rubensworks.net/', 'https://www.rubensworks.net/#me' %>[<sup>1</sup>](#idlab)
 - <%= person 'Jindřich Mynarz', 'https://mynarz.net/', 'https://mynarz.net/#jindrich' %>[<sup>2</sup>](#prague)
-- <%= person 'Jerven Bolleman', 'https://www.sib.swiss/directory/person/jerven-tjalling-bolleman' %>[<sup>3</sub>](#swiss-prot)
+- <%= person 'Jerven Bolleman', 'https://www.sib.swiss/directory/person/jerven-tjalling-bolleman', 'https://www.sib.swiss/directory/person/jerven-tjalling-bolleman' %>[<sup>3</sub>](#swiss-prot)
 
 {:#affiliations}
 - <sup>1</sup>{:#idlab} IDLab,
