--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -14,8 +14,7 @@ title: "Developers Workshop (SemDev)"
             Department of Electronics and Information Systems,
             Ghent University – imec, Ghent, Belgium
 			<br />E-mail: ruben.taelman@ugent.be
-- <sup>2</sup>{:#prague} Department of Information and Knowledge Engineering,
-             Prague University of Economics and Business, Prague, Czech Republic
+- <sup>2</sup>{:#prague} MSD Czech Republic, Prague, Czech Republic,
 			 <br />E-mail: mynarzjindrich@gmail.com
 - <sup>3</sup>{:#swiss-prot} Swiss-Prot Group,
              SIB Swiss Institue of Bioinformatics, Geneva, Switzerland
