--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -17,7 +17,7 @@ title: "Developers Workshop (SemDev)"
 - <sup>2</sup>{:#prague} MSD Czech Republic, Prague, Czech Republic,
 			 <br />E-mail: mynarzjindrich@gmail.com
 - <sup>3</sup>{:#swiss-prot} Swiss-Prot Group,
-             SIB Swiss Institue of Bioinformatics, Geneva, Switzerland
+             SIB Swiss Institute of Bioinformatics, Geneva, Switzerland
 			 <br />E-mail: jerven.bolleman@sib.swiss
 
 
