Refocus for Semantics

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -21,7 +21,7 @@ title: "Developers Workshop (SemDev)"
 
 
 <section class="context" markdown="block">
-Workshop at [ISWC 2025](https://iswc2025.semanticweb.org/#/calls/workshopstutorials){:rel="as:inReplyTo"}, November 2/3 2025
+Workshop at [Semantics 2025](https://2025-eu.semantics.cc/page/cfp_ws){:rel="as:inReplyTo"}, September 1 2025
 </section>
 
 <%= section 'abstract' %>
@@ -34,7 +34,6 @@ Workshop at [ISWC 2025](https://iswc2025.semanticweb.org/#/calls/workshopstutori
   <%= section 'format' %>
   <%= section 'review' %>
   <%= section 'publication' %>
-  <%= section 'committee' %>
   <%= section 'audience' %>
 </main>
 
